@@ -95,25 +95,13 @@ public class HTTPEndpoint extends AbstractEndpoint {
         // http method from incoming message is used as the http method
     }
 
-    private String decodeString(String value) {
-        if (value == null) {
-            return "";
-        }
-        try {
-            return URLDecoder.decode(value, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            if(log.isDebugEnabled()){
-                log.warn("Encoding is not supported", e);
-            }
-            return value;
-        }
-    }
     private void processUrlTemplate(MessageContext synCtx) throws ExpressionParseException {
         Map<String, Object> variables = new HashMap<String, Object>();
 
         /*The properties with uri.var.* are only considered for Outbound REST Endpoints*/
         Set propertySet = synCtx.getPropertyKeySet();
 
+<<<<<<< HEAD
         if (legacySupport) {
             for (Object propertyKey : propertySet) {
                 if (propertyKey.toString() != null&&
@@ -123,8 +111,18 @@ public class HTTPEndpoint extends AbstractEndpoint {
                         variables.put(propertyKey.toString(), decodeString((String) synCtx.getProperty(propertyKey.toString())));
                     }
                 }
+=======
+        for (Object propertyKey : propertySet) {
+            if (propertyKey.toString() != null&&
+                    (propertyKey.toString().startsWith(RESTConstants.REST_URI_VARIABLE_PREFIX)
+                            || propertyKey.toString().startsWith(RESTConstants.REST_QUERY_PARAM_PREFIX))) {
+                if (synCtx.getProperty(propertyKey.toString()) != null) {
+                    variables.put(propertyKey.toString(), (String) synCtx.getProperty(propertyKey.toString()));
+                }                              
+>>>>>>> wso2/master
             }
 
+<<<<<<< HEAD
             // Include properties defined at endpoint.
             Iterator endpointProperties = getProperties().iterator();
             while(endpointProperties.hasNext()) {
@@ -155,13 +153,31 @@ public class HTTPEndpoint extends AbstractEndpoint {
                         property.getName().toString().startsWith(RESTConstants.REST_QUERY_PARAM_PREFIX) )) {
                     variables.put(property.getName(), (String) property.getValue());
                 }
+=======
+        // Include properties defined at endpoint.
+        Iterator endpointProperties = getProperties().iterator();
+        while(endpointProperties.hasNext()) {
+            MediatorProperty property = (MediatorProperty) endpointProperties.next();
+            if(property.getName().toString() != null
+                    && (property.getName().toString().startsWith(RESTConstants.REST_URI_VARIABLE_PREFIX) ||
+                    property.getName().toString().startsWith(RESTConstants.REST_QUERY_PARAM_PREFIX) )) {
+                variables.put(property.getName(), (String) property.getValue());
+>>>>>>> wso2/master
             }
         }
 
         // We have to create a local UriTemplate object, or else the UriTemplate.set(variables) call will fill up a list of variables and since uriTemplate
         // is not thread safe, this list won't be clearing.
         UriTemplate template = null;
-        template = UriTemplate.fromTemplate(uriTemplate.getTemplate());
+        String tmpl;
+        // This is a special case as we want handle {uri.var.variable} having full URL (except as a path param or query param)
+        // this was used in connectors Eg:- uri-template="{uri.var.variable}"
+        if(uriTemplate.getTemplate().charAt(0)=='{' && uriTemplate.getTemplate().charAt(1)!='+'){
+            tmpl = "{+" + uriTemplate.getTemplate().substring(1);
+        } else {
+            tmpl = uriTemplate.getTemplate();
+        }
+        template = UriTemplate.fromTemplate(tmpl);
 
         if(template != null) {
             template.set(variables);
@@ -172,12 +188,8 @@ public class HTTPEndpoint extends AbstractEndpoint {
         	evaluatedUri = template.getTemplate();
         }else{
             try {
-                // Decode needs to avoid replacing special characters(e.g %20 -> %2520) when creating URL.
-                String decodedString = URLDecoder.decode(template.expand(), "UTF-8");
-                URL url = new URL(decodedString);
-                URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(),
-                        url.getPath(), url.getQuery(), url.getRef());// this to avoid url.toURI which causes exceptions
-                evaluatedUri = uri.toURL().toString();
+                URI uri=new URI(template.expand());
+                evaluatedUri = uri.toString();
                 if (log.isDebugEnabled()) {
                     log.debug("Expanded URL : " + evaluatedUri);
                 }
@@ -186,12 +198,6 @@ public class HTTPEndpoint extends AbstractEndpoint {
                     log.debug("Invalid URL syntax for HTTP Endpoint: " + this.getName(), e);
                 }
                 evaluatedUri = template.getTemplate();
-            } catch(MalformedURLException e) {
-                log.debug("Invalid URL for HTTP Endpoint: " + this.getName());
-                evaluatedUri = template.getTemplate();
-            } catch(UnsupportedEncodingException e) {
-                log.debug("Exception while decoding the URL in HTTP Endpoint: " + this.getName());
-                evaluatedUri = template.getTemplate();                
             } catch(ExpressionParseException e) {
                 log.debug("No URI Template variables defined in HTTP Endpoint: " + this.getName());
                 evaluatedUri = template.getTemplate();
